돔을 이용하여 html 객체 저장

--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/js/home/login.js"></script>
+    <script src="/js/home/login.js" defer></script>
 </head>
 
 <body>
-    <input type="text" placeholder="ID">
+    <input id="id" type="text" placeholder="ID">
 </body><br>
-<input type="text" placeholder="PW"></body><br>
+<input id ="password" type="text" placeholder="PW"></body><br>
 <button>로그인</button>
 </body>
 
